<resources>
    <string name="app_name">TP04-Login-with-Navigation</string>
    <string name="btLogin">Login</string>
    <string name="edPass">password: 123</string>
    <string name="edUser">usuario: user</string>
    <string name="tvBienvenido">¡Bienvenido! / Welcome!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TP 04 - Login with Menú Navigation</string>
    <string name="nav_header_subtitle">user@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_llamar">Llamar</string>
    <string name="menu_foto">Foto</string>
    <string name="menu_salir">Salir</string>
    <string name="etTelefono">Introduce teléfono</string>
    <string name="bt_Llamar">Llamar</string>
    <string name="tv_llamar">Llamar</string>
    <string name="tvFoto">Mi Foto</string>
    <string name="foto">Mi foto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvTitulo">Titulo</string>
    <string name="tvAutor">Autor</string>
    <string name="menu_libros">Libros</string>
    <string name="tvEditorial">Editorial</string>
    <string name="tvAño">Año</string>
    <string name="tvAnio">Año</string>
    <string name="detalles_fragment">Detalles del Libro</string>
</resources>